# 3d-renderer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  application.cpp  application.h  camera.cpp  camera.h  clip.cpp  clip.h  glm.h  image_io.cpp  image_io.h  lights.h  main.cpp  mesh_data.h  picture.cpp  picture.h  primitives.h  rasterizer.cpp  rasterizer.h  renderer.cpp  renderer.h  screen.h  world.cpp  world.h
